--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div style="background-color: #F9F7F7;">
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container align-items-center">
-      <a href="#" class="navbar-brand" routerLink="/accueil">{{title}}</a>
+      <a href="#" class="navbar-brand" routerLink="/accueil"><em class="fa fa-comments fa-lg"> </em>&nbsp;{{title}}</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
