--- a/src/app/forums-user/forums-user.component.html
+++ b/src/app/forums-user/forums-user.component.html
@@ -15,7 +15,7 @@
 </div>
 <ng-template #elseForums>
   <div class="table-responsive">
-    <table class="table table-responsive table-striped ">
+    <table class="table table-striped ">
       <caption>Liste des Forums</caption>
       <thead>
         <tr>
