--- a/src/app/themes-user/theme-user/theme-user.component.html
+++ b/src/app/themes-user/theme-user/theme-user.component.html
@@ -15,12 +15,10 @@
 </td>
 <td><em class="fa fa-comments fa-lg "></em>&nbsp;{{posts.length}}</td>
 
-<td >
-    <div *ngIf="userId === moderator._id; else notModerator">
+<td *ngIf="userId === moderator._id">
+    <div >
       
       <button class="btn btn-danger" (click)="deleteTheme()" [disabled]="posts.length > 0">Supprimer</button>&nbsp;
     </div>
-    <ng-template #notModerator>
-          
-    </ng-template>
+    
   </td>
