--- a/src/app/users/register-user/register-user.component.html
+++ b/src/app/users/register-user/register-user.component.html
@@ -2,28 +2,31 @@
 <div mat-dialog-content>
     <small [hidden] = "!showError" style="color: red;">L'e-mail que vous avez choisi existe déjà !</small>
     
-  <form #RegisterRorm="ngForm" (ngSubmit)="register()">
+  <form [formGroup]="registerForm" (ngSubmit)="register()">
     &nbsp;
     <div class="form-group">
         <label>Nom</label>
-        <input  class="form-control" type="text" placeholder="Nom" name="nom"
-            [(ngModel)]="user.nom" required />
-        
+        <input  class="form-control" type="text" placeholder="Nom"  formControlName="nom"  />
+        <small *ngIf="registerForm.get('nom').hasError('required')" class="text-danger">Champs obligatoire</small>
     </div>
     <div class="form-group">
         <label>Prénom</label>
-        <input class="form-control" type="text" placeholder="Prénom" name="prenom"
-            [(ngModel)]="user.prenom" required />
+        <input class="form-control" type="text" placeholder="Prénom"  formControlName="prenom"  />
+        <small *ngIf="registerForm.get('prenom').hasError('required')" class="text-danger">Champs obligatoire</small>
     </div>
     <div class="form-group">
         <label>Email</label>
-        <input class="form-control" type="email" placeholder="adresse@gmail.com" name="email" [(ngModel)]="user.email" required />
+        <input class="form-control" type="email" placeholder="adresse@organisme.com" formControlName="email"  />
+        <small *ngIf="registerForm.get('email').hasError('required')" class="text-danger">Champs obligatoire</small>
+        <small *ngIf="registerForm.get('email').hasError('pattern')" class="text-danger">Respecter la forme de l'email</small>
     </div>
     <div class="form-group">
         <label>Mot de passe</label>
-        <input class="form-control" type="password" placeholder="******" name="password" [(ngModel)]="user.password" required />
+        <input class="form-control" type="password" placeholder="******" formControlName="password"  />
+        <small *ngIf="registerForm.get('password').hasError('required')" class="text-danger">Champs obligatoire</small>
+        <small *ngIf="registerForm.get('password').hasError('minLength')" class="text-danger">Doit contenir au moins 8 caractères</small>
     </div>
-    <button mat-button  type="submit" class="btn btn-primary" [disabled]="!RegisterRorm.valid" style="float: right;">
+    <button mat-button  type="submit" class="btn btn-primary" [disabled]="!registerForm.valid" style="float: right;">
         S'inscrire
     </button>
 </form>
